--- a/custom_product/index.html
+++ b/custom_product/index.html
@@ -67,7 +67,7 @@
     <p></p>
     <h1>SHOW TABLE
     <button onClick="showList()">등록 제품 확인</button></h1>
-    <table style="width:100%" id="table1"><th>등록시각</th><th>제품명</th><th>생산지</th><th>수량</th></table>
+    <table style="width:100%" id="table1"></table>
     
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
